# airllm

./: .gitignore  Cargo.toml  README.md  airllm_backend.py  airllm_rs_enhancements.md  cmd.txt  fix_app.py  patch_ui.py  patch_ui2.py  test_output.txt
src/: config.rs  main.rs
src/agent/: executor.rs  mod.rs  tools.rs  workspace.rs
src/backend/: mod.rs  process.rs  protocol.rs
src/memory/: graph.rs  mod.rs  summarize.rs  vault.rs
src/tui/: app.rs  graph.rs  layout.rs  mod.rs
