[package]
name = "airllm-rs"
version = "0.1.0"
edition = "2021"
description = "Terminal chat UI for AirLLM with Obsidian memory graph"
license = "Apache-2.0"

[[bin]]
name = "airllm"
path = "src/main.rs"



[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"
ureq = { version = "2", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Misc
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }